--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=inventarios
 
-# Conexión a MySQL
+# ConexiÃ³n a MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/inventario_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de JPA
+# ConfiguraciÃ³n de JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Configurar el patrón del log (en lugar del archivo logback-spring.xml)
+# Configurar el patrÃ³n del log (en lugar del archivo logback-spring.xml)
 logging.pattern.console=[%thread] %-5level: %logger - %msg%n
 
 # Configurar el nivel de log (INFO)
