edit aplication properties-prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=inventarios
 
-# Conexión a PostgreSQL en Render
+# ConexiÃ³n a PostgreSQL en Render
 spring.datasource.url=jdbc:postgresql://dpg-d00gn17gi27c73b9cjbg-a/render.com:5432/inventarios_db
 spring.datasource.username=inventarios_db_user
 spring.datasource.password=i7GgOzJm4Dt7gCmhbAdhp87OfNkhMu9r
