--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=inventarios
 
 # Conexión a PostgreSQL en Render
-spring.datasource.url=jdbc:postgresql://dpg-d00gn17gi27c73b9cjbg-a/render.com:5432/inventarios_db
+spring.datasource.url=jdbc:postgresql://dpg-d00gn17gi27c73b9cjbg-a.render.com:5432/inventarios_db
 spring.datasource.username=inventarios_db_user
 spring.datasource.password=i7GgOzJm4Dt7gCmhbAdhp87OfNkhMu9r
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.pattern.console=[%thread] %-5level: %logger - %msg%n
 logging.level.root=INFO
 spring.main.banner-mode=off
+
+#KEY: SPRING_PROFILES_ACTIVE
+#VALUE: prod
