--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 spring.application.name=inventarios
 
-# Conexión a PostgreSQL en Render
-spring.datasource.url=jdbc:postgresql://dpg-d00gn17gi27c73b9cjbg-a.virginia-postgres.render.com:5432/inventarios_db
-spring.datasource.username=inventarios_db_user
-spring.datasource.password=i7GgOzJm4Dt7gCmhbAdhp87OfNkhMu9r
+# Conexion a PostgreSQL en Render
+spring.datasource.url=jdbc:postgresql://inventarios_db_3974_user:0xJiX1JWSzZJpcxcw42Ev9LehNaeJkuZ@dpg-d1ismlp5pdvs73b57p90-a.virginia-postgres.render.com/inventarios_db_3974
+spring.datasource.username=inventarios_db_3974_user
+spring.datasource.password=0xJiX1JWSzZJpcxcw42Ev9LehNaeJkuZ
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
