--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=inventarios
 
-# Conexion a PostgreSQL en Render
-spring.datasource.url=jdbc:postgresql://inventarios_db_3974_user:0xJiX1JWSzZJpcxcw42Ev9LehNaeJkuZ@dpg-d1ismlp5pdvs73b57p90-a.virginia-postgres.render.com/inventarios_db_3974
+
+spring.datasource.url=jdbc:postgresql://dpg-d1ismlp5pdvs73b57p90-a.virginia-postgres.render.com:5432/inventarios_db_3974
 spring.datasource.username=inventarios_db_3974_user
 spring.datasource.password=0xJiX1JWSzZJpcxcw42Ev9LehNaeJkuZ
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,6 +14,5 @@ logging.pattern.console=[%thread] %-5level: %logger - %msg%n
 logging.level.root=INFO
 spring.main.banner-mode=off
 
-
-#KEY: SPRING_PROFILES_ACTIVE
-#VALUE: prod
+# KEY: SPRING_PROFILES_ACTIVE
+# VALUE: prod
